# telegram-viewer

./: .env.example  .gitignore  .impeccable.md  CLAUDE.md  Caddyfile  Caddyfile.docker  README.md  docker-compose.yml  justfile  setup.sh
backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  database.py  deps.py  face_scanner.py  indexer.py  main.py  pyproject.toml  telegram_client.py  utils.py
backend/routes/: auth.py  cache.py  faces.py  groups.py  media.py  settings.py
backend/tests/: conftest.py  helpers.py  test_database.py  test_database_cache_jobs.py  test_face_scanner.py  test_indexer.py  test_main.py  test_routes_auth.py  test_routes_cache.py  test_routes_faces.py  test_routes_groups.py  test_routes_media.py  test_routes_settings.py  test_telegram_client.py  test_utils.py
docs/: backend-architecture.md  frontend-architecture.md  project-overview.md
docs/superpowers/plans/: 2026-03-15-telegram-viewer.md  2026-03-17-audit-fixes.md  2026-03-17-cmd-click-person-select.md  2026-03-17-docker-compose.md  2026-03-17-empty-state-onboarding.md  2026-03-17-index-decomposition.md  2026-03-17-light-mode.md  2026-03-17-loading-skeleton.md  2026-03-17-segmented-filter-controls.md  (+14 more)
frontend/: .dockerignore  .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  Dockerfile  README.md  docker-entry.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/public/: manifest.json
frontend/src/: styles.css
remotion/: package.json
remotion/src/: DemoVideo.tsx  LogoAnimation.tsx  Root.tsx
(+141 files in other folders)
