[project]
name = "backend"
version = "0.1.0"
description = "Telegram Media Viewer backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "telethon>=1.37",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.24.3",
    "numpy>=2.4.3",
    "scikit-learn>=1.8.0",
    "pillow>=12.1.1",
    "cachetools>=7.0.5",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [".", "tests"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
    "ty>=0.0.23",
]
